*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -41,6 +41,9 @@
 
 '''འབྲུག་ཡུལ་'''
 
+== འབྲུག་ཡུལ་གྱི་ལོ་རྒྱུས་མདོར་བསྡུས། རྨ་མགུར་སངས་རྒྱམ། ==
+དེ་ཡང་དུས་རབས་དགུ་བའི་གོང་དུ་བྱུང་བའི་འབྲུག་ཡུལ་གྱི་གནས་ཚུལ་རྣམས་གསལ་བོ་ཤེས་རྟོགས་བྱུང་མེད་པ་དང་། དེའི་རྗེས་སུ། བོད་དུ་བླ་མ་ཆེ་ཁག་དང་ཆོས་ལ་དད་པ་ཡོད་མཁན་མང་བོ་དམར་གསོད་དུ་བཏང་བའི་དྲག་པོའི་ཟིང་ཆ་བྱུང་བའི་སྐབས་སུ་བོད་ཀྱི་གྲྭ་བ་མང་བོ་འབྲུག་ཏུ་བྲོས་བྱོལ་དུ་བསླེབས་ཤིང་། གནས་དེར་གཞིས་ཆགས་ནས་བོད་ཀྱི་སངས་རྒྱས་ཆོས་ལུགས་དར་སྤེལ་བྱུང་བ་ལ་བརྟེན་ནས་ལོ་རྒྱུས་ཀྱི་འཕེལ་ཁ་ཇེ་རྒྱས་སུ་ཕྱིན་པ་རེད། དུས་རབས་༡༢་བའི་ནང་དུ་འབྲུག་ཏུ་འབྲུག་པ་བཀའ་བརྒྱུད་དར་སྤེལ་བྱུང་བ་དང་། དེ་ནས་འབྲུག་གི་ཆབ་སྲིད་ཀྱི་ལོ་རྒྱུས་རྣམས་བོད་ཀྱི་ཆོས་བརྒྱུད་ཀྱི་ལམ་ལུགས་རྨང་གཞིར་བཟུང་བའི་སྟེང་ནས་གོང་འཕེལ་དུ་བྱུང་བ་དང་། འབྲུག་ཡུལ་ནི། ཡུན་རིང་གི་ལོ་རྒྱུས་ཀྱི་བརྒྱུད་རིམ་སྣ་མང་ལ་བརྟེན་ནས་རིམ་བཞིན་རང་བཙན་གཙང་མའི་རྒྱལ་ཁབ་ཅིག་གི་ངོ་བོར་གནས་ཐུབ་པར་གྱུར་ཡོད། དུས་རབས་བདུན་པའི་དཀྱིལ་ནས་དུས་རབས་དགུ་བའི་བར་དུ་བོད་ཀྱི་རྒྱལ་རབས་ཀྱི་སྲིད་དབང་གི་འོག་ཏུ་གནས་ཡོད་པར་བཤད་པ་དང་། དེའི་རྗེས་སུ། འབྲུག་ཡུལ་དུ་གཅིག་གྱུར་གྱི་དབང་བསྒྱུར་མེད་པར་ས་གནས་ཁག་ཁ་འཐོར་དུ་གནས་པའི་ཡུལ་གྱི་དཔོན་པོ་བྱུང་བ་དང་། སྤྱི་ལོ་༡༦༡༦་ལོའི་ནང་དུ། བོད་ཀྱི་གཙང་སྟོད་ནས་ཡིན་པའི་བླ་མ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་འབྲུག་ཡུལ་དུ་ཕེབས་ནས། ཁོང་གིས་འབྲུག་ཡུལ་ནི་གཅིག་གྱུར་གྱི་ཡུལ་གྲུ་ཞིག་ཏུ་བཟོས་ཤིང་། འབྲུག་པའི་རིག་གཞུང་གི་ངོ་བོ་སོགས་བོད་ཀྱི་ཤེས་རིག་གི་ཁྱད་ཆོས་ལས་ཁ་བྲལ་དུ་གནས་པར་འབད་བརྩོན་གནང་བ་རེད། ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ནི་བོད་ཀྱི་གཙང་རྭ་ལུང་དགོན་པ་ནས་ཡིན་པ་དང་འབྲུག་པ་བཀའ་བརྒྱུད་ཀྱི་སྲོལ་འཛིན་མཁན་འབྲུག་པ་མི་ཕམ་བསྟན་པའི་ཉི་མ་དང་སྡེ་བ་སྐྱིད་ཤོད་པའི་སྲས་མོ་བསོད་ནམས་དཔལ་གྱི་བུ་ཁྲིད་གཉིས་ཀྱི་སྲས་ཡིན། གཞོན་དུས་ཁོང་ནི་རྒྱལ་དབང་འབྲུག་ཆེན་གྱི་ཡང་སྲིད་ལ་ངོས་འཛིན་མཛད་དེ། གཙང་རྭ་ལུང་དགོན་པར་ཁྲི་འདོན་གནང་ནའང་འབྲུག་ཆེན་པདྨ་དཀར་བོའི་རྗེས་འབྲངས་པ་ལྷ་རྩེ་ངག་དབང་བཟང་བོ་སོགས་ཀྱིས་ངོས་ལེན་མ་གནང་པ་དང་། ཡིན་ཡང་། ཁོང་གིས་མུ་མཐུད་དུ་འབྲུག་པ་བཀའ་བརྒྱུད་ཀྱི་མ་དགོན་རྭ་ལུང་དུ་མུ་མཐུད་དུ་རྒྱུན་བཞུགས་དང་ཁྲི་འཛིན་གནང་བ་ལ་གཞན་གྱིས་དབྱེན་སྦྱོར་སྣ་མང་བརྩམས་པ་དང་། བོད་ཀྱི་གཙང་པ་སྡེ་སྲིད་ལགས་ཀྱིས་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་འཛིན་བཟུང་བྱེད་པར་གྲ་སྒྲིག་བྱས་པ་ལ་བརྟེན་ནས། སྤྱི་ལོ་༡༦༡༦་ལོར་ཁོང་བོད་ནས་ཕྱོགས་ཐོན་མཛད་དེ་འབྲུག་ཏུ་ཕེབས་པ་དང་དེའི་ནུབ་ཕྱོགས་ཀྱི་ས་གནས་ཁག་ཏུ་རྟེན་གཞི་བྱས་ནས་རྒྱུན་བཞུགས་གནང་བར་མ་ཟད། ཐིམ་པུ་ལུང་གཞོངས་ཀྱི་སྟོད་ཕྱོགས་སུ། སྤྱི་ལོ་༡༦༢༠་ལོར་འབྲུག་པ་བཀའ་བརྒྱུད་ཀྱི་ཆག་རི་དགོན་པ་ཕྱག་འདེབས་མཛད་ཅིང་། འབྲུག་ཡུལ་དུ་འབྲུག་པ་བཀའ་བརྒྱུད་ཀྱི་ཆོས་རྒྱུན་རིམ་བཞིན་གསར་བཏོད་གནང་བ་རེད། ད་དུང་སྤྱི་ལོ་༡༦༢༩་ལོར་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱིས་འབྲུག་གི་ཐིམ་པུ་ཕྱོགས་སུ་བསམ་སྟོད་ཀ་རྫོང་སྟེ་སྲིད་འཛིན་གྱི་ལྟེ་བ་གསར་འཛུགས་གནང་ཞིང་། དུས་རབས་༡༢་ནས་འབྲུག་གི་ནང་དུ་དར་ཁྱབ་བྱུང་བའི་ལྷ་པ་བཀའ་བརྒྱུད་དང་རྙིང་མ་ཆོས་བརྒྱུད་བཅས་ཀྱིས་བདག་འཛིན་བྱས་པའི་ས་ཆ་ཁ་ཤས་ཤིག་ལ་དབང་བསྒྱུར་མཛད་ཅིང་། དེ་ནས་རིམ་གྱིས་འབྲུག་གི་ས་ཁུལ་ཡོངས་སུ་ལས་འགུལ་སྣ་མང་གཅིག་རྗེས་གཉིས་མཐུད་དུ་སྤེལ་བ་ལ་བརྟེན་ནས། འབྲུག་ཡོངས་རྫོགས་གཅིག་གྱུར་གྱི་དབང་བསྒྱུར་མཛད་པའི་ཐབས་བྱུས་བཤམས་པ་རེད། འབྲུག་གི་ཁྲིམས་ཀྱི་བཅའ་ཡིག་ཆེན་མོ་བཟོས་ཤིང་། བོད་ཀྱི་སྡེ་བ་གཞུང་གི་སྲིད་ཀྱི་དབང་བསྒྱུར་ལས་ལོགས་སུ་བགར་བ་དང་། ཞབས་དྲུང་ཞེས་པའི་མིང་གི་གོ་གནས་སོགས་བཟུང་སྟེ་འབྲུག་གི་དགོན་སྡེ་དང་མི་སྡེ་ཁག་གི་སྲིད་ཀྱི་འཛིན་སྐྱོང་གི་ལམ་ལུགས་གསར་དུ་བཏོད་ཡོད། དེ་ནས་སྤྱི་ལོ་༡༦༥༡་ལོར་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་ནི་ སྐུ་འདས་གྲོངས་སུ་ཕྱིན་པ་རེད། དེའི་རྗེས་སུ་སྲིད་ཀྱི་དབང་ཆ་མཐའ་དག་ཁོང་གི་རྗེས་འབྲངས་བ་ཡིན་པའི་ས་གནས་དཔོན་སློབ་རྣམས་ཀྱིས་མཇུག་སྐྱོང་གནང་བ་དང་། ཁོང་སྐུ་འདས་གྲོངས་སུ་ཕྱིན་པའི་གནས་ཚུལ་ནི་ས་གནས་དཔོན་སློབ་རྣམས་ཀྱིས་ལོ་ངོ་༥༤་རིང་དུ་གསང་རྒྱ་མཛད་དེ་མུ་མཐུད་དུ་ཁོང་གི་ལས་དོན་རྣམས་རྒྱུན་འཛིན་གནང་པ་རེད། ད་ལྟའང་འབྲུག་ཏུ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་འདས་གྲོངས་སུ་ཕྱིན་པའི་ཉིན་མོ་དེ་འབྲུག་རྒྱལ་ཡོངས་ཀྱི་གུང་གསེང་ཞིག་ལྟར་དུ་བོད་ལུགས་ཀྱི་ཟླ་བཞི་བའི་ཚེས་བཅུ་ལ་སྲུང་བརྩི་ཞུ་བཞིན་པ་རེད། དེ་ནས་རིམ་གྱིས་འབྲུག་གི་ས་གནས་ཁག་ཏུ་ལོ་ངོ་ཉིས་བརྒྱའི་རིང་དུ་མི་དམངས་ནང་ཁུལ་ལ་སྲིད་དབང་རྩོད་ལེན་དང་འཐབ་འཛིང་ནང་འཁྲུག་གི་རྒྱུན་མ་ཆད་པར་བསྟུད་མར་བྱུང་བ་ཁག་བརྒྱུད་ནས། སྤྱི་ལོ་༡༨༨༥་ལོར་འབྲུག་རྒྱལ་དང་པོ་ཨོ་རྒྱན་དབང་ཕྱུག་གིས་འབྲུག་གི་སྲིད་དབང་མཐའ་དག་གཅིག་ཏུ་བསྒྲིལ་པ་དང་། དེ་ནས་ཨིན་ཇི་དང་རྒྱ་གར་མཉམ་དུ་མཐུན་སྒྲིལ་གྱི་ཆིངས་ཡིག་རྒྱུད་འཛིན་བྱས་པ་རེད། ཨོ་རྒྱན་དབང་ཕྱུག་ནི་སྤྱི་ལོ་༡༨༦༢་ལོར་ཀྲོང་གསར་རྫོང་གི་དཔོན་སློབ་ཀྱི་གོ་གནས་འཛིན་པའི་འཇིགས་མེད་རྣམ་རྒྱལ་དང་ཨ་ཞེ་པད་མ་ཆོས་སྐྱིད་གཉིས་སུ་འཁྲུངས་པ་དང་། ཡབ་དམ་པའི་དཔོན་སློབ་ཀྱི་གོ་གནས་རྒྱུན་འཛིན་དང་ཆབ་སྲིད་ཀྱི་དགྲ་བོ་རྣམས་ཕམ་པར་མཛད་པ་ལ་བརྟེན་ནས། འབྲུག་གི་རྒྱལ་ས་རྙིང་བ་སྤུ་ན་ཁའི་མི་དམངས་ཀྱིས་ཁོང་ནི་འབྲུག་གི་རྒྱལ་བོར་བདམས་པ་དང་། སྤྱི་ལོ་༡༩༠༧་ལོའི་ཟླ་༡༢་པའི་ཚེས་༡༧་ཉིན་ལ་འབྲུག་གི་རྒྱལ་བོའི་དབུ་ཞྭ་ལེགས་པར་བསྣམས་ཡོད་པ་རེད། སྤུ་ན་ཁ་ནི་འབྲུག་ཡུལ་ལ་རྫོང་ཁག་ཉི་ཤུ་ཡོད་པའི་ནང་གི་གཅིག་ཡིན་པ་དང་། དེ་ནི་སྤྱི་ལོ་༡༩༥༥་ལོའི་བར་དུ་འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྒྱལ་ས་དང་སྲིད་འཛིན་གྱི་ས་གནས་ཤིག་ཏུ་གྱུར་ཡོད། དེའི་རྗེས་སུ་རྒྱལ་ས་ཐིམ་པུ་ལ་གནས་སྤོར་གནང་ཡོད། སྤྱི་ལོ་༡༩༡༠་ལོའི་ནང་དུ་ཁོང་གིས་ཨིན་ཇི་དང་མཉམ་དུ་སྤུ་ན་ཁའི་ཆིངས་ཡིག་བཞག་ནས་ཨིན་ཇིའི་རྒྱ་གར་གཞུང་གིས་འབྲུག་རྒྱལ་ཁབ་ཀྱི་ནང་སྲིད་ལ་ཐེ་གཏོགས་མི་བྱེད་པར་བཟོས་པ་རེད། སྤྱི་ལོ་༡༩༢༦་ལོར་ཨོ་རྒྱན་དབང་ཕྱུག་སྐུ་གྲོངས་པའི་རྗེས་སུ། ཁོང་གི་སྲས་འབྲུག་རྒྱལ་གཉིས་པ་འཇིགས་མེད་དབང་ཕྱུག་གིས་རྒྱལ་བོའི་རྒྱུན་འཛིན་གནང་ནས་སྲིད་ཀྱི་གོ་གནས་བཟུང་བ་རེད། སྤྱི་ལོ་༡༩༤༧་ལོར་རྒྱ་གར་རང་བཙན་ཐོབ་པའི་སྐབས་སུ། རྒྱ་གར་གྱི་གཞུང་གསར་བས་འབྲུག་ནི་རང་བཙན་རྒྱལ་ཁབ་ཅིག་ཡིན་པར་ངོས་འཛིན་གནང་ཡོད། ལོ་དེར་རྒྱ་གར་དང་འབྲུག་གཉིས་ཀྱིས་ཞི་བདེ་དང་མཛའ་མཐུན་གྱི་ཆིངས་ཡིག་ལ་མཚན་རྟགས་བཀོད་པ་དང་། རྒྱ་གར་གྱི་ཕྱི་འབྲེལ་སྲིད་བྱུས་ཀྱི་ནང་དུ་རྒྱ་གར་གྱིས་འབྲུག་ལ་བཀོད་འདོམས་བྱེད་པ་ལས་འབྲུག་གི་ནང་སྲིད་ལ་ཐེ་བྱུས་མི་བྱེད་པར་འགན་ལེན་བྱས་ཡོད། སྤྱི་ལོ་༡༩༥༢་ལོར་ཁོང་གི་སྲས་འབྲུག་རྒྱལ་གསུམ་པ་འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་གིས་རྒྱལ་བོའི་གོ་གནས་བཞེས་པ་དང་། དེ་ནས་འབྲུག་རྒྱལ་ཁབ་རིམ་བཞིན་ཡར་རྒྱས་ཀྱི་རྣམ་པ་བྱུང་ཞིང་། སྤྱི་ལོ་༡༩༧༡་ལོར་འཛམ་གླིང་མཉམ་འབྲེལ་རྒྱལ་ཚོགས་ཀྱི་ཚོགས་མིའི་ཁོངས་སུ་ཚུད་ཡོད། ཁོང་གིས་འབྲུག་ཏུ་རྒྱལ་ཡོངས་གྲོས་ཚོགས་དང་རྒྱལ་བོའི་དམག་དཔུང་དང་མཐོ་རིམ་ཁྲིམས་ཁང་སོགས་བཙུགས་ནས་དེང་རབས་སུ་ཕྱོགས་སུ་བསྐྱོད་པའི་འགོ་བརྩམས་ཡོད། སྤྱི་ལོ་༡༩༧༢་ལོར་རྒྱལ་བོ་འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་གློ་བུར་དུ་འདས་གྲོངས་སུ་ཕྱིན་པའི་རྗེས་སུ། ཁོང་གི་སྲས་འབྲུག་རྒྱལ་བཞི་བ་འཇིགས་མེད་སེང་གེ་དབང་ཕྱུག་ལགས་དགུང་ལོ་བཅུ་བདུན་སྟེང་རྒྱལ་བོའི་ཁྲི་ལ་འཁོད་ཅིང་། སྤྱི་ལོ་༡༩༧༤་ལོའི་ཟླ་༦་ཚེས་༢་ཉིན་ལ་འབྲུག་རྒྱལ་བོའི་དབུ་ཞྭ་གསོལ་བ་རེད། ཁོང་ནི་འཛམ་གླིང་འདིའི་ནང་གི་རྒྱལ་བོ་གཞོན་ཤོས་དེ་ཆགས་པ་དང་། འབྲུག་དང་། རྒྱ་གར། ཨིན་ཇི། ཨ་རི་སོགས་ཀྱི་མཐོ་སློབ་ཁག་ཏུ་དེང་རབས་ཀྱི་ཤེས་ཡོན་སྣ་མང་ལ་སློབ་སྦྱོང་བྱས་མྱོང་བའི་མི་སྣ་ཞིག་ཡིན་པས། རྒྱལ་སྤྱིའི་གནས་ཚུལ་ལ་ཤེས་རྟོགས་ཟབ་པ་དང་འབྲུག་ཏུ་དེང་གི་ཤེས་ཡོན་སློབ་གསོ་དང་། ཆབ་སྲིད་འཛིན་སྐྱོང་། ཡུལ་སྐོར་ལྗོངས་རྒྱུ། དཔལ་འབྱོར་བཅོས་བསྒྱུར། རྒྱལ་ཡོངས་བདེ་སྐྱིད། དམངས་གཙོའི་ལྟ་གྲུབ་ལ་སོགས་གོང་འཕེལ་དང་ཡར་རྒྱས་སུ་བཏང་བའི་རླབས་ཆེན་གྱི་མཛད་རྗེས་ཡོད་པ་ཞིག་ཡིན། འབྲུག་ཏུ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གི་ཡང་སྲིད་ཀྱི་སྐོར་ལ་སྐུ་གསུང་ཐུགས་ཀྱི་སྤྲུལ་བ་སོགས་རྩོད་རྙོག་སྣ་མང་གི་ཁྲོད་དུ་འབྲུག་སྡེ་སྲིད་དང་། རྗེ་མཁན་པོ། དཔོན་སློབ་གསུམ་གྱིས་ངོས་འཛིན་སྟངས་མི་འདྲ་བ་མང་བོ་རིམ་པར་བྱོན་པ་དང་འབྲུག་གཞུང་གིས་ཁོང་གི་སྤྲུལ་སྐུ་ལ་བཀག་སྡོམ་གྱི་བྱེད་ཐབས་ཀྱང་མཛད་པ་རེད། གཞན་ཡང་། རྒྱ་གར་གྱི་མོན་རྟ་དབང་དགོན་པ་དང་། བོད་སོགས་སུའང་ཁོང་གི་ཡང་སྲིད་བྱུང་ཡོད་པ་སྟེ། དེང་སང་ཨི་ཏ་ལིར་བཞུགས་པའི་བོད་རིགས་མཁས་དབང་ནམ་མཁའི་ནོར་བུ་ཡང་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱི་ཡང་སྲིད་ཡིན་པར་བཤད་དོ། ། ད་དུང་དེང་སང་འབྲུག་ཏུ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱི་སྤྲུལ་སྐུ་ལ་ངོས་འཛིན་གནང་བའི་ཕྲུ་གུ་ལོ་ཆུང་ཆུང་ཞིག་ཡོད་པ་སྤྱི་ལོ་༢༠༠༥་ལོ་ནས་བཟུང་ཕ་མ་དང་མཉམ་དུ་བཟང་བཙོན་དུ་བཞག་ཡོད་པར་བཤད་པ་རེད། སྤྱི་ལོ་༢༠༠༦་ལོའི་ཟླ་༡༢་བའི་ཚེས་༡༤་ཉིན་དུ་འབྲུག་རྒྱལ་བཞི་བ་འཇིགས་མེད་སེང་གེ་དབང་ཕྱུག་གིས་རྒྱལ་བོའི་སྲིད་དབང་གི་གོ་གནས་ལས་དགོངས་པ་ཞུས་ནས། སྲས་འབྲུག་རྒྱལ་ལྔ་བ་འཇིགས་མེད་གེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག་རྒྱལ་ཚབ་ཏུ་བསྐོ་བཞག་གནང་བ་རེད། སྤྱི་ལོ་༢༠༠༨་ལོའི་ཟླ་༡༡་པའི་ཚེས་༦་ཉིན་དུ་འབྲུག་གི་གནའ་བོའི་གྲོང་ཁྱེར་རྙིང་བ་སྤུ་ན་ཁ་རུ་གཞུང་འབྲེལ་གྱི་མཛད་སྒོ་རྒྱ་ཆེན་པོ་ཞིག་གི་སྟེང་དུ་སྲས་འཇིགས་མེད་གེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག་ལ་རྒྱལ་བོའི་དབུ་ཞྭ་དེ་གསོལ་བ་རེད། སྐབས་དེར་རྒྱ་གར་གྱི་སྲིད་འཛིན་དང་ཕྱི་སྲིད་བློན་ཆེན་ཐེ་བའི་ཕྱི་རྒྱལ་གྱི་སྐུ་མགྲོན་མང་བོ་མཉམ་ཞུགས་གནང་ཡོད། སྲས་འཇིགས་མེད་གེ་སར་ནི་འབྲུག་རྒྱལ་བཞི་བ་འཇིགས་མེད་སེང་གེ་དབང་ཕྱུག་ལ་བཙུན་མོ་བཞི་ཡོད་པའི་ནང་གི་གསུམ་པ་ཨ་ཤེ་ཚེ་རིང་གཡང་སྒྲོན་གྱི་སྲས་རྒན་པ་ཡིན། ཁོང་གིས་ཆུང་དུས་འབྲུག་ཏུ་གཡང་ཆེན་པུ་འབྲིང་རིམ་སློབ་གྲྭར་སློབ་སྦྱོང་བྱས་པ་དང་། དེ་ནས་རིམ་བཞིན་ཨ་རི་ནང་དུ་མཐོ་སློབ་ཁག་ཁ་ཤས་ལ་འགྲིམས་པའི་རྗེས་སུ་ཨིན་ཇིའི་ཨོ་ཁུ་སི་ཕོར་ཏྲི་སློབ་ཆེན་དུ་ཕྱི་ཕྱོགས་ཀྱི་ཞབས་ཞུ་སྒྲིག་གཞི་དང་རྒྱལ་སྤྱིའི་འབྲེལ་ལམ་སྐོར་ལ་སློབ་གཉེར་བྱས་ནས་སློབ་ཐོན་ཕྱིན་པ་རེད། སྤྱི་ལོ་༢༠༡༡་ལོའི་ཟླ་༥་བའི་ཚེས་༢༠་ཉིན་དུ་རྒྱལ་བོ་འཇིགས་མེད་གེ་སར་གྱིས་རྒྱལ་ཡོངས་གྲོས་ཚོགས་ཀྱི་ཚོགས་དུས་བདུན་པའི་སྒོ་འབྱེད་མཛད་སྒོ་གནང་བའི་སྐབས་སུ། ཁོང་ནི་སྤྱི་ལོ་༢༠༡༡་ལོའི་ཟླ་༡༠་བའི་ཚེས་༡༣་ཉིན་དུ་སྤུ་ན་ཁ་གྲོང་ཁྱེར་དུ་རང་ལོ་ཉེར་གཅིག་ཡིན་པའི་འབྲུག་གི་མི་སེར་དཀྱུས་མ་རྗེ་བཙུན་པདྨ་ལགས་ལ་འཁྲུངས་ས་བསྐྱོན་རྒྱུ་ཡིན་པར་གསལ་བསྒྲགས་བསྐྱངས་པ་རེད། དེ་ལྟར་དུ་ཉིན་དེར་འབྲུག་གི་ཆུ་བོ་ཕོ་ཆུ་དང་མོ་ཆུ་ཟེར་བ་གཉིས་འཛོམས་སའི་གནས་ཏེ་པུ་ན་ཁ་རྫོང་དུ་མཛེས་སྡུག་གི་ཡོན་ཏན་ཡོངས་སུ་རྫོགས་པའི་རྗེ་བཙུན་པད་མ་མཆོག་འབྲུག་གི་སྲོལ་རྒྱུན་ཆོས་ལུགས་ཀྱི་དགའ་སྟོན་རྟེན་འབྲེལ་གྱི་མཛད་སྒོ་རྒྱ་ཆེན་པོ་ཞིག་དང་མཉམ་དུ་རྒྱལ་བོའི་ཁབ་ཏུ་བཞེས་ཡོད་པ་རེད།
+
 == ལོ་རྒྱུས། ==
 * [[ཐང་སྟོང་རྒྱལ་པོ]]
 * [[མར་པ་ལོ་ཙཱ་བ]]
