--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -2,8 +2,7 @@ __NOTOC__
 __NOTOC__
 <!--  {{Banner}}   -->
 {|border="1" width="100%"
-|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]རྫོང་ཁའི་ཝེ་ཁེ་རིག་མཛོད་དུ་བྱོན་པ་ལེགས་! 
-གལ་ཏེ་ཁྱེད་ཀྱིས་ཤོག་ངོས་འདིར་རྫོང་ཁ་ལ་ལྟ་མི་ཐུབ་ན་ [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan Unicode script] ཕབ་ལེན་བྱེད་དགོས།
+|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]རྫོང་ཁའི་ཝེ་ཁེ་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།
 </center>
 |<inputbox>
  type=create
