*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,72 +1,66 @@
-__NOTOC__
-__NOTOC__
-<!--  {{Banner}}   -->
-{|border="1" width="100%"
-|[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]རྫོང་ཁའི་ཝེ་ཁེ་རིག་མཛོད་ལུ་བྱོན་པ་ལེགས་སོ།
-</center>
-|<inputbox>
- type=create
- width=35
- bgcolor=#ffffff
- preload=Template:Standard content for new page
- editintro=Template:Instructions
- default=
-</inputbox>
-|}
-{|
-| width="50%" valign="middle" |
-{| width="100%" border="0" cellspacing="0" cellpadding="5"
-| width="10%" |[[File:Nuvola_apps_kcoloredit.png|centre|40x40px]]
-| width="90%" style="font-size: 95%; " |'''[[འབྲུག་རྒྱལ་ཁབ་]]'''
-[[འབྲུག་ཡུལ་]]&nbsp;- [[སྐུ་འཁོར་གྱི་རྒྱུད་པ།]]&nbsp;- [[འབྲུག་]]&nbsp;- [[ཐིམ་ཕུ་]]&nbsp;- [[རྫོང་ཁ་]]&nbsp; [[དངུལ་ཀྲམ་]]&nbsp;- [[རྒྱལ་པོ་འཇིགས་མེད་ཁེ་གསར་རྣམ་རྒྱལ་དབང་པྱུག་]]&nbsp;- [[འབྲུག་ཙན་དན་]]&nbsp;- [[ཕུན་ཚོགས་གླིང་]]&nbsp;- [[སྤུ་ན་ཁ་]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་]]&nbsp;- [[གསར་སྤང་]]&nbsp;- [[སྤ་རོ་]]&nbsp;- [[བཀྲིས་སྒང་]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་]]&nbsp;- [[ཏ་ག་རྫོང་]]&nbsp;- [[ཀྲོང་གསར་]]&nbsp;- [[རྟ་མགོ]]&nbsp;-
-|-
-|[[File:Nuvola_apps_edu_languages.png|centre|40x40px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[རྫོང་ཁག]]'''
-[[ཀྲོང་གསར་རྫོང་ཁག]]&nbsp;· [[བཀྲིས་སྒང་རྫོང་ཁག]]&nbsp;· [[མགར་ས་རྫོང་ཁག]]&nbsp;· [[ཆུ་ཁ་རྫོང་ཁག]]་&nbsp;· [[ཐིམ་ཕུ་རྫོང་ཁག]]&nbsp;· [[དར་དཀར་ན་རྫོང་ཁག]]&nbsp;· [[པདྨ་དགའ་ཚལ་རྫོང་ཁག]]&nbsp;· [[སྤ་རོ་རྫོང་ཁག]]&nbsp;· [[སྤུ་ན་ཁ་རྫོང་ཁག]]&nbsp;·  [[བུམ་ཐང་རྫོང་ཁག]]&nbsp;· [[དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]]&nbsp;· [[མོང་སྒར་རྫོང་ཁག]]&nbsp;· [[རྩི་རང་རྫོང་ཁག]]&nbsp;· [[གཞལ་ལམ་སྒང་རྫོང་ཁག]]&nbsp;·  [[གཡང་རྩེ་རྫོང་ཁག]]&nbsp;· [[གསར་སྤང་རྫོང་ཁག]]&nbsp;· [[བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག]]&nbsp;· [[བསམ་རྩེ་རྫོང་ཁག]]&nbsp;· [[ཧཱ་རྫོང་ཁག]]&nbsp;· [[ལྷུན་རྩེ་རྫོང་ཁག]]&nbsp;·
-|-
-|[[File:Nuvola_apps_bookcase.png|centre|40x40px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[སྐད་ཡིག]]'''
-[[ཨིང་ལིཤ]]&nbsp;- [[བོད་སྐད།]]་&nbsp;- [[ཨུ་རུ་སུའི་སྐད།]]་&nbsp;- [[རྒྱ་སྐད]]&nbsp;- [[ཧྥུ་རན་སིའི་སྐད་]]&nbsp;-[[ལྷོ་ཀོ་རི་ཡའི་སྐད་]]&nbsp;-[[གསེར་ལྡན་རྒྱལ་ཁབ་ཀྱི་སྐད]]&nbsp;-
-|-
-|[[File:Dharma_Wheel.svg|centre|40x40px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[ཆོས]]''' <!--Religion-->
-[[སངས་རྒྱས་ཀྱི་བསྟན་པ]]།<!--Buddhism-->&nbsp;· [[བཀའ་བརྒྱུད་པ།]]&nbsp;·་[[འབྲུག་པ་བཀའ་བརྒྱུད།|	འབྲུག་པ་བཀའ་བརྒྱུད་པ།]]&nbsp;· [[སྔ་འགྱུར་རྙིང་མ་བ།]]&nbsp;· [[ས་སྐྱ་པ]]&nbsp;·  
 
-[[མུ་སྟེགས་པ་ཆོས་ལུགས]]&nbsp;·  [[ཧིན་རྡུ་ཆོས་ལུགས།]]&nbsp;· <!--Hinduism-->&nbsp;· [[རྒྱལ་བ་པ།]]<!--Jainism-->&nbsp;· [[ཁྱབ་འཇུག་པ་ཆོས་ལུགས]] <!--Vaishnava-->&nbsp;· [[དབང་ཕྱུག་]] <!--Śavite--> [[ཡེ་ཤུའི་ཆོས་ལུགས]]<!--Christianity-->&nbsp;- [[ཁ་ཆེའི་ཆོས་ལུགས]]<!--Islam-->&nbsp;· [[ཆད་ལྟའི་རིང་ལུགས]]<!--Atheism-->&nbsp;·
-|-
-|[[File:Trashigang_Dzong-rear-2008-01-02.jpg|centre|40x40px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[འབྲུག་གི་རྫོང་གཞི]]''' <!--Dzongs of Bhutan-->
-[[དར་དཀར་བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་]]།<!--Darkar Trashi Yangtse Dzong-->&nbsp; [[འབྲུག་རྒྱལ་རྫོང་]]།<!--Drukgyal Dzong-->&nbsp; [[ཧཱ་ དབང་ཕྱུག་ལྷོ་རྫོང་]]།<!--Haa Wangchuck Lo Dzong-->&nbsp; [[ལྷུན་སྒྲུབ་ རིན་ཆེན་རྩེ་ རྫོང་]]།<!--Lhundrup Rinchentse Dzong-->&nbsp; [[སྤུ་ན་ཁ་རྫོང་]]།<!--Punakha Dzong-->&nbsp; [[སེངྒེ་རྫོང་]]།<!--Singye Dzong-->&nbsp; [[བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་]]།<!--Trashi Yangtse Dzong-->&nbsp; [[བཀྲ་ཤིས་སྒང་རྫོང་]]།<!--Trashigang Dzong-->&nbsp; [[དབང་འདུས་ཕོ་བྲང་རྫོང་]]།<!--Wangdue Phodrang Dzong-->&nbsp; [[ཞོང་གར་རྫོང་]]།<!--Zhongar Dzong-->&nbsp; [[རྡོ་གར་རྡོབ་རྗི་རྫོང་]]།<!--Dogar Dobji Dzong-->&nbsp; [[མགར་ས་ བཀྲ་ཤིས་མཐོང་སྨོན་རྫོང་]]།<!--Gasa Trashi Thongmoen Dzong-->&nbsp; [[བྱ་དཀར་གཡུལ་རྒྱལ་རྫོང་]]།<!--Jakar Yugyel Dzong-->&nbsp; [[སྤ་རོ་ རིན་སྤུང་རྫོང་]]།<!--Paro Rinpung Dzong-->&nbsp; [[སེམས་རྟོགས་ཁ་རྫོང་]]།<!--Simtokha Dzong-->&nbsp;  [[ལྟ་རྫོང་]]།<!--Ta Dzong-->&nbsp; [[བཀྲ་ཤིས་ཆོས་རྫོང་]]།<!--Trashichho Dzong-->&nbsp; [[ཀྲོང་གསར་རྫོང་]]།<!--Trongsa Dzong-->&nbsp; [[ཞལམ་སྒང་ བདེ་ཆེན་གཡང་རྩེ་རྫོང་]]།<!--Zhemgang Dechen Yangtse Dzong-->&nbsp;
-|}
-| width="50%" valign="top" |
-{| width="100%" border="0" cellspacing="0" cellpadding="5"
-| width="10%" |[[File:Nuvola_apps_kalzium.png|centre|40x40px]]
-| width="90%" style="font-size: 95%;" |'''[[ཨེ་ཤར་ཡ་]]'''
-[[འཇར་པན།]]&nbsp;- [[རྒྱ་མི།]]&nbsp;- [[སོག་པོ།]]&nbsp;- [[ཐེ་ཝན།]]&nbsp;- [[ཀམ་བོ་ཌི་ཡ།]]&nbsp;- [[མེ་མར།]]&nbsp;- [[ཐཱའི་ལེནཌ།]]&nbsp;- [[ལྷོ་ཀོ་རི་ཡ།]]&nbsp;- [[བྱང་ཀོ་རི་ཡ།]]&nbsp;- [[རྒྱ་གར།]]&nbsp;- [[ཤྲཱྀ་ལངཀ་]]&nbsp;- [[བལ་ཡུལ།]]&nbsp;- [[བངྒ་ལ་དེཤ།]]&nbsp;- [[མ་ལེ་ཤི་ཡ།]]&nbsp;- [[ཨཕ་ག་ནིསི་ཏཱན།]]&nbsp;- [[ཨི་རཱན།]]&nbsp;- [[ལེ་བཱ་ནཱོན་]]&nbsp;- [[ཨིཛ་རཱེལ་]]&nbsp;- [[ཀུ་ཝེཊ་]]&nbsp;- [[ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨེ་མི་རེཊསི་]]&nbsp;- [[ཨུཛ་བེ་ཀིསི་ཏཱན་]]&nbsp;- [[ཏ་ཇག་ཀིསི་ཏཱན་]]&nbsp;- [[བཧ་རེན་]]&nbsp;- [[སའུ་དི་ཨེ་ར་སྦི་ཡ་]]&nbsp;-
-|-
-|[[File:Nuvola_apps_display.png|centre|40x40px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA; " |'''[[དཔེ་བསྐྲུན།]]''' <!--Others-->
-[[ཨ་ཧྥེ་རི་ཀ་]]&nbsp;- [[ཨེན་ཊཱག་ཊི་ཀ་]]&nbsp;-  [[གཟའ་ཟླ་བ་]]&nbsp;- [[གཟའ་མིག་དམར་]]&nbsp;- [[གཟའ་ལྷག་པ་]]&nbsp;- [[གཟའ་ཕུར་བུ་]]&nbsp;- [[གཟའ་པ་སངས་]]&nbsp;- [[གཟའ་སྤེན་པ་]]&nbsp;- [[གཟའ་ཉི་མ་]]&nbsp;- [[སྤྱི་ཟླ་དང་པོ་]]&nbsp;- [[སྤྱི་ཟླ་གཉིས་པ་]]&nbsp;- [[སྤྱི་ཟླ་གསུམ་པ་]]&nbsp;- [[སྤྱི་ཟླ་བཞི་པ་]]&nbsp;- [[སྤྱི་ཟླ་ལྔ་པ་]]&nbsp;- [[སྤྱི་ཟླ་དྲུག་པ་]]&nbsp;- [[སྤྱི་ཟླ་བདུན་པ་]]&nbsp;- [[སྤྱི་ཟླ་བརྒྱད་པ་]]&nbsp;- [[སྤྱི་ཟླ་དགུ་པ་]]&nbsp;- [[སྤྱི་ཟླ་བཅུ་པ་]]&nbsp;- [[སྤྱི་ཟླ་བཅུ་གཅིག་པ་]]&nbsp;- [[སྤྱི་ཟླ་བཅུ་གཉིས་པ་]]&nbsp;-
-|-
-|[[File:Nuvola_apps_atlantik.png|centre|40x40px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[གཙུག་ལག་སློབ་གྲྭ]]'''
-[[གཙུག་ལག་སློབ་གྲྭ]]&nbsp;- [[ཚན་རིག]]&nbsp;- [[རྫས་འགྱུར་རིག་པ]]&nbsp;- [[དངོས་ཁམས་རིག་པ]]&nbsp;- [[སྲོག་ཁམས་རིག་པ]]&nbsp;- [[བཟོ་ལས]]<!-- Engineering -->&nbsp;- [[ས་གཞི་རིག་པ]]&nbsp;- [[མཁའ་དབྱིངས་རིག་པ]]&nbsp;- [[ཚོང]]&nbsp;- [[དཔལ་འབྱོར་རིག་པ]]&nbsp;-
-|-
-|[[File:Nuvola_apps_xmag.png|centre|40x40px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[རྩེད་རིགས]]'''
-[[དྲྭ་རིལ]]&nbsp;- [[ཐང་རིལ]]&nbsp;- [[རྐང་རིལ]]&nbsp;- [[རག་བི]]&nbsp;- [[གཡུག་རིལ]]&nbsp;- [[འདེད་རིལ]]<!-- hockey -->&nbsp;-
-|-
-|[[File:Kyichu_Lhakhang-060701.JPG|centre|53x53px]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" |'''[[འབྲུག་གི་དགོན་སྡེ་དང་ལྷ་ཁང་]]''' <!--Monasteries in Bhutan-->
-[[སྦོ་ཁ་རྫོང་]]།<!--Bokha Dzong-->&nbsp; [[མཆོད་རྟེན་སྐོར་ར]]།<!--Chorten Kora-->&nbsp; [[དགྲ་མེད་རྩེ་ལྷ་ཁང་]]།<!--Drametse Lhakhang-->&nbsp; [[ལྷ་ཁང་དཀར་པོ]]།<!--Lhakhang Karpo-->&nbsp; [[རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་]]།<!--Talo Sanga Choeling-->&nbsp; [[ཡོངས་ལ་དཔལ་རི་དགོན་པ]]།<!--Yongla Pelri Gonpa-->&nbsp; [[སྒོམ་ཕུ་སྐོར་ར]]།<!--Gomphu Kora-->&nbsp; [[སྐྱིད་ཆུ་ལྷ་ཁང་]]།<!--Kichu Lhakhang-->&nbsp; [[རྟ་མགོ་དགོན་པ]]།<!--Tango Monastery-->&nbsp; [[བུ་ལི་ ཁི་ལམ་ ལྷ་ཁང་]]།<!--Buli Khelem Gonpa-->&nbsp; [[རྡོ་ལུང་ དགོན་པ]]།<!--Dolung Gonpa-->&nbsp; [[བྱམས་པ་ལྷ་ཁང་]]།<!--Jampa Lhakhang-->&nbsp; [[སྟག་ཚང་]]།<!--Taktshang-->&nbsp; [[མཚམས་བྲག་དགོན་པ]]།<!--Tsamdrak Gonpa-->&nbsp; [[སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་]]།<!--Gangtey Sanga Choeling-->&nbsp; [[སྐུ་རྗེས་ ལྷ་ཁང་]]།<!--Kurje Lhakhang-->&nbsp; [[ཕ་ཇོ་ལྡིང་ལྷ་ཁང་]]།<!--Phajoding Monastey-->&nbsp; [[ཁམས་གསུམ་གཡུལ་ལས་རྣམ་རྒྱལ་མཆོད་རྟེན།]]&nbsp; 
-|}
-|}
-
-== སྐད་རིགས་གཞན། ==
-{{སྐད་རིགས་གཞན།}}
-
-== ཁ་སྐད། ==
-{{གཞན།. ཁ་སྐད། ཁ། སྐད་ཡིག}}
-<!-- missing WikiMedia 1.3 support -->
-<!-- missing WikiMedia 1.3 support -->
-<!-- missing WikiMedia 1.3 support -->
+Pages transcluded onto the current version of this page (help) :
+Wikipedia:Main Page/Tomorrow (view source) (protected)
+Wikipedia:Selected anniversaries/October 19 (edit)
+Wikipedia:Selected anniversaries/October 20 (edit)
+Wikipedia:Today's featured article/October 19, 2019 (edit)
+Wikipedia:Today's featured article/October 20, 2019 (edit)
+Template:-? (view source) (semi-protected)
+Template:Convert (view source) (template protected)
+Template:DYKbotdo (view source) (protected)
+Template:Did you know (view source) (protected)
+Template:Did you know/Queue/4 (view source) (protected)
+Template:Did you know/Queue/Next (view source) (protected)
+Template:If empty (view source) (template protected)
+Template:In the news (view source) (protected)
+Template:In the news/footer (view source) (protected)
+Template:In the news/image (view source) (protected)
+Template:Lang (view source) (template protected)
+Template:Main Page banner (view source) (protected)
+Template:Main Page interwikis (view source) (protected)
+Template:Main page image (view source) (template protected)
+Template:Mbox (view source) (protected)
+Template:Nowrap (view source) (protected)
+Template:Other areas of Wikipedia (view source) (protected)
+Template:POTD protected/2019-10-19 (edit)
+Template:POTD protected/2019-10-20 (edit)
+Template:Remove file prefix (view source) (template protected)
+Template:SelAnnivFooter (view source) (protected)
+Template:Start date (view source) (template protected)
+Template:Str endswith (view source) (template protected)
+Template:Str number/trim (view source) (template protected)
+Template:TFAFULL (view source) (protected)
+Template:TFAIMAGE (view source) (protected)
+Template:TFAfooter (view source) (protected)
+Template:TFArecentlist (view source) (protected)
+Template:Transl (view source) (template protected)
+Template:Wikipedia languages (view source) (protected)
+Template:Wikipedia languages/core (view source) (protected)
+Template:Wikipedia's sister projects (view source) (protected)
+Template:Wikipedia's sister projects/styles.css (view source) (protected)
+Template:· (view source) (protected)
+Module:Arguments (view source) (protected)
+Module:Convert (view source) (template protected)
+Module:Convert/data (view source) (template protected)
+Module:Convert/text (view source) (template protected)
+Module:If empty (view source) (template protected)
+Module:Lang (view source) (template protected)
+Module:Lang/ISO 639 synonyms (view source) (template protected)
+Module:Lang/data (view source) (template protected)
+Module:Language/data/ISO 639-3 (view source) (template protected)
+Module:Language/data/iana languages (view source) (template protected)
+Module:Language/data/iana regions (view source) (template protected)
+Module:Language/data/iana scripts (view source) (template protected)
+Module:Language/data/iana suppressed scripts (view source) (template protected)
+Module:Language/data/iana variants (view source) (template protected)
+Module:Language/data/wp languages (view source) (template protected)
+Module:Language/name/data (view source) (template protected)
+Module:Message box (view source) (protected)
+Module:Message box/configuration (view source) (protected)
+Module:No globals (view source) (protected)
+Module:String (view source) (template protected)
+Module:TableTools (view source) (template protected)
+Module:Unicode data (view source) (template protected)
+Module:Unicode data/scripts (view source) (template protected)
+Module:Yesno (view source) (protected)
+Return to Main Page.
