--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -2,7 +2,7 @@
 <div id="mp-topbanner" style="clear:both; position:relative; box-sizing:border-box; width:100%; margin:1.2em 0 6px; min-width:47em; border:1px solid #ddd; background-color:#f9f9f9; color:#000; white-space:nowrap;">
 <!--        "WELCOME TO WIKIPEDIA" AND ARTICLE COUNT        -->
 <div style="margin:0.4em; width:22em; text-align:center;">
-<div style="font-size:162%; padding:.1em;">ཝེ་ཁེ་རིག་མཛོད་ལུ་ བྱོན་པ་ལེགས་སོ།</div>
+<div style="font-size:162%; padding:.1em;">རྫོང་ཁའི་ཝེ་ཁེ་རིག་མཛོད་ལུ་ བྱོན་པ་ལེགས་སོ།</div>
 <div style="font-size:95%;">ག་གི་ཡང་ཞུན་དག་འབད་བཏུབ་པའི་ རིག་མཛོད་ཆེན་པོ།</div>
 <div id="articlecount" style="font-size:85%;">རྫོང་ཁའི་ནང་ རྩོམ་བྲིས་[[Special:Statistics|{{NUMBEROFARTICLES}}]] ཡོད།</div>
 </div>
@@ -11,12 +11,12 @@
 <li style="position:absolute; left:0; top:0;">[[Portal:Arts|སྲིད་རིག]]</li>
 <li style="position:absolute; left:0; top:1.6em;">[[Portal:Biography|རྣམ་ཐར]]</li>
 <li style="position:absolute; left:0; top:3.2em;">[[Portal:Geography|ས་ཆ་རིག་པ]]</li>
-<li style="position:absolute; left:33%; top:0;">[[Portal:History|བྱུང་རབས]]</li>
-<li style="position:absolute; left:33%; top:1.6em;">[[Portal:Mathematics|རྩིས་རིག]]</li>
-<li style="position:absolute; left:33%; top:3.2em;">[[Portal:Science|ཚན་རིག]]</li>
-<li style="position:absolute; left:66%; top:0;">[[Portal:Society|མི་སྡེ]]</li>
-<li style="position:absolute; left:66%; top:1.6em;">[[Portal:Technology|འཕྲུལ་རིག]]</li>
-<li style="position:absolute; left:66%; top:3.2em;"><strong>[[Portal:Contents/Portals|མ་སྒོ་ གཞན]]</strong></li>
+<li style="position:absolute; left:30%; top:0;">[[Portal:History|བྱུང་རབས]]</li>
+<li style="position:absolute; left:30%; top:1.6em;">[[Portal:Mathematics|རྩིས་རིག]]</li>
+<li style="position:absolute; left:30%; top:3.2em;">[[Portal:Science|ཚན་རིག]]</li>
+<li style="position:absolute; left:60%; top:0;">[[Portal:Society|མི་སྡེ]]</li>
+<li style="position:absolute; left:60%; top:1.6em;">[[Portal:Technology|འཕྲུལ་རིག]]</li>
+<li style="position:absolute; left:60%; top:3.2em;"><strong>[[Portal:Contents/Portals|མ་སྒོ་ གཞན]]</strong></li>
 </ul>
 </div>
 <!--        MAIN PAGE BANNER        -->
